--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@
         </label>
         <div class="wrapper font_style">
           <ul class="menu text-center">
-            <li class="menu-item text-center"><a href="#home">HOME</a></li>
-            <li class="menu-item text-center"><a href="#aboutme">ABOUT ME</a></li>
-            <li class="menu-item text-center"><a href="#challenge">CHALLENGES</a></li>
-            <li class="menu-item text-center"><a href="#">DOWNLOADS</a></li>
+            <li class="menu-item text-center "><a href="index.html">HOME</a></li>
+            <li class="menu-item text-center"><a href="pages/aboutme.html">ABOUT ME</a></li>
+            <li class="menu-item text-center"><a href="pages/challenges.html">CHALLENGES</a></li>
+            <li class="menu-item text-center"><a href="pages/hireme.html">HIRE ME</a></li>
+            <li class="menu-item text-center"><a href="https://www.deviantart.com/meenaketan">DOWNLOADS</a></li>
           </ul>
         </div>
       </nav>
@@ -73,11 +74,17 @@
         <h3 class="hero-header font_style" style="font-weight: 800;">CREATIONS</h3>
       </div>
       <p class="hero-sub font_style" style="line-height: 1.5;font-family: 'Roboto'; ">
-        Who the hack am I , what are my goal in life and why do i make the stuff I make.
+        Take a look at the projects i have been working on through time. I am a self-taught graphics designer and most
+        of my projects are for fun.I try to create better art each and every day.
       </p>
-      <button onclick="window.location.href='#'" class="btn-round-solid" style="background-color: rgb(243, 181, 10);">
-        <ion-icon name="play"></ion-icon> Watch
-      </button>
+      <button onclick="window.location.href='https://www.instagram.com/the_noobe_show_/?utm_medium=copy_link'"
+          class="btn-round-solid" style="background-color: rgb(243, 181, 10);">
+          <ion-icon name="play"></ion-icon> EXPLORE
+        </button>
+        <button onclick="window.location.href='pages/hireme.html'" class="btn-round-solid"
+          style="background-color: rgb(243, 181, 10);">
+          <ion-icon name="play"></ion-icon> HIRE ME
+        </button>
     </div>
     <!--  paralax1 end -->
   </div>
